--- a/native/zkvm/Cargo.toml
+++ b/native/zkvm/Cargo.toml
@@ -15,3 +15,5 @@ risc0-zkvm = { version = "2.0.2", features = ["prove", "std", "unstable"] }
 serde = { version = "1.0.197", default-features = false }
 serde_json = "1.0"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
+rand = "0.8"
