--- a/native/aarm_core/Cargo.toml
+++ b/native/aarm_core/Cargo.toml
@@ -10,7 +10,14 @@ edition = "2021"
 risc0-zkvm = "2.0.2"
 serde = { version = "1.0.197", default-features = false }
 serde-big-array = "0.5.1"
-k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
+k256 = { version = "=0.13.3", features = [
+    "arithmetic",
+    "serde",
+    "expose-field",
+    "std",
+    "ecdsa",
+    "hash2curve",
+], default-features = false }
 sha2 = "0.10.6"
 sha3 = "0.10"
 rand = "0.8"
