--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-local_domain-*.tar
+anoma_sdk-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
