--- a/native/zkvm/Cargo.toml
+++ b/native/zkvm/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 rustler = "0.36.2"
 aarm_core = { path = "../aarm-risc0/aarm_core" }
+aarm = { path = "../aarm-risc0/aarm" }
 risc0-zkvm = { version = "2.0.2", features = ["prove", "std", "unstable"] }
 serde = { version = "1.0.197", default-features = false }
 serde_json = "1.0"
